--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <!-- fourth region start-->
         <div class="description-gallery">
             <div class="decription__text">
+                <div class="scripcerit__text">
                  <h5>scripcerit</h5>
                 </div>
                 <div class="unmm_porro">
@@ -111,6 +112,7 @@
                         Explore
                     </button>
                 </div>
+            </div>
                 <div class="bitmap__img">
                     <img src="Bitmap.png" alt="images">
                 </div>
