--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="site-header">
         <div class="container site-header__container">
             <div class="site-header__left">
-                <img src="/images/LOGO.png" alt="site_logo">
+                <img src="LOGO.png" alt="site_logo">
             </div>
 
             <div class="site-header__right">
@@ -42,7 +42,7 @@
                 </button>
             </div>
             <div class="hero-region__right">
-                <img class="hero-img" src="/images/hero-img.png" alt="site-image">
+                <img class="hero-img" src="hero-img.png" alt="site-image">
             </div> 
         </div>
     </div>
@@ -54,7 +54,7 @@
                 <div class="vivendi-region__images">
                     <div class="square__box">
                         <div class="square">
-                            <img src="/images/square_box.png" alt="box_img">
+                            <img src="square_box.png" alt="box_img">
                         </div>
 
                         <h4 class="rectangle__text">Quidam officiis</h4>
@@ -68,7 +68,7 @@
 
                     <div class="square__box">
                             <div class="square_truck">
-                                <img src="/images/truck.png" alt="truck_img">
+                                <img src="truck.png" alt="truck_img">
                             </div>
                                                   
                             <h4 class="rectangle__text__truck">mazim nemore</h4>
@@ -82,7 +82,7 @@
 
                     <div class="square__box">
                             <div class="circle">
-                                <img src="/images/24_hrs.png" alt="24hrs_img">
+                                <img src="24_hrs.png" alt="24hrs_img">
                             </div>
                            
                             <h4 class="rectangle__text__circle">Idque maiestatis</h4>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="bitmap__img">
-                <img src="/images/Bitmap.png" alt="images">
+                <img src="Bitmap.png" alt="images">
             </div>
         </div>
 
@@ -127,9 +127,9 @@
                         Pro eu apeirian suavitate dissentiet, qui dicunt ancillae id, ne mea homero persequeris.
                     </div>
                     <div class="social-site__icons">
-                        <img src="/images/fb.png" alt="facebook-icon">
-                        <img src="/images/twitter.png" alt="twitter-icon">
-                        <img src="/images/insta.png" alt="insta-icon">
+                        <img src="fb.png" alt="facebook-icon">
+                        <img src="twitter.png" alt="twitter-icon">
+                        <img src="insta.png" alt="insta-icon">
                     </div>
                 </div>
                 <div class="footer__cause">
@@ -153,7 +153,7 @@
                 <div class="footer__image">
                     <div class="footer__img">
                         <div class="footer__img1">
-                            <img src="/images/img1.png" alt="img1">
+                            <img src="img1.png" alt="img1">
                         </div>
                         <div class="img__desc">
                             <div>Ius delectus instructior eu, eu eum mentitum percipi forensibus</div>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="footer__img">   
                         <div class="footer__img2">
-                            <img src="/images/img2.png" alt="img2">
+                            <img src="img2.png" alt="img2">
                         </div>
                         <div class="img2__desc">
                                 <div>Altera integre suavitate per an, alienum phaedrum te sea</div>
